--- a/section3/Basic Calculator/src/basic/calculator/FXMLDocument.fxml
+++ b/section3/Basic Calculator/src/basic/calculator/FXMLDocument.fxml
@@ -43,12 +43,12 @@
             <Button maxHeight="30.0" maxWidth="40.0" minHeight="30.0" minWidth="40.0" mnemonicParsing="false" onAction="#handleTwoAction" prefHeight="30.0" prefWidth="40.0" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Button maxHeight="30.0" maxWidth="40.0" minHeight="30.0" minWidth="40.0" mnemonicParsing="false" onAction="#handleTwoAction" prefHeight="30.0" prefWidth="40.0" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2" />
             <Button maxHeight="30.0" maxWidth="40.0" minHeight="30.0" minWidth="40.0" mnemonicParsing="false" onAction="#handleTwoAction" prefHeight="30.0" prefWidth="40.0" text="0" GridPane.rowIndex="5" />
-            <Button maxHeight="30.0" maxWidth="40.0" minHeight="30.0" minWidth="40.0" mnemonicParsing="false" onAction="#handleTwoAction" prefHeight="30.0" prefWidth="40.0" text="." GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Button maxHeight="30.0" maxWidth="40.0" minHeight="30.0" minWidth="40.0" mnemonicParsing="false" onAction="#handleDotAction" prefHeight="30.0" prefWidth="40.0" text="." GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <Button maxHeight="30.0" maxWidth="40.0" minHeight="30.0" minWidth="40.0" mnemonicParsing="false" onAction="#handleEqualAction" prefHeight="30.0" prefWidth="40.0" text="=" GridPane.columnIndex="2" GridPane.rowIndex="5" />
             <Button maxHeight="70.0" maxWidth="40.0" minHeight="70.0" minWidth="40.0" mnemonicParsing="false" onAction="#handleAddAction" prefHeight="70.0" prefWidth="40.0" text="+" GridPane.columnIndex="3" GridPane.rowIndex="4" GridPane.rowSpan="2147483647" />
             <Button maxHeight="30.0" maxWidth="40.0" minHeight="30.0" minWidth="40.0" mnemonicParsing="false" onAction="#handleTwoAction" prefHeight="30.0" prefWidth="40.0" text="-" GridPane.columnIndex="3" GridPane.rowIndex="3" />
             <Button maxHeight="30.0" maxWidth="40.0" minHeight="30.0" minWidth="40.0" mnemonicParsing="false" onAction="#handleTwoAction" prefHeight="30.0" prefWidth="40.0" text="x" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-            <Button maxHeight="30.0" maxWidth="40.0" minHeight="30.0" minWidth="40.0" mnemonicParsing="false" onAction="#handleTwoAction" prefHeight="30.0" prefWidth="40.0" text="/" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <Button maxHeight="30.0" maxWidth="40.0" minHeight="30.0" minWidth="40.0" mnemonicParsing="false" onAction="#handleDivideAction" prefHeight="30.0" prefWidth="40.0" text="/" GridPane.columnIndex="3" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </children>
