--- a/section2/Basic Calculator/src/basic/calculator/FXMLDocument.fxml
+++ b/section2/Basic Calculator/src/basic/calculator/FXMLDocument.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
@@ -7,11 +8,50 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="basic.calculator.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="308.0" prefWidth="240.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="basic.calculator.FXMLDocumentController">
    <children>
-      <TextField fx:id="displayField" layoutX="14.0" layoutY="14.0" prefHeight="64.0" prefWidth="293.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
-      <Button layoutX="14.0" layoutY="88.0" mnemonicParsing="false" onAction="#handleOneAction" text="1" />
-      <Button layoutX="48.0" layoutY="88.0" mnemonicParsing="false" onAction="#handleTwoAction" text="2" />
-      <Button layoutX="83.0" layoutY="88.0" mnemonicParsing="false" onAction="#handleThreeAction" text="3" />
+      <GridPane prefHeight="200.0" prefWidth="400.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Button maxHeight="40.0" maxWidth="50.0" minHeight="40.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleThreeAction" prefHeight="40.0" prefWidth="50.0" text="3" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <Button maxHeight="40.0" maxWidth="50.0" minHeight="40.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleTwoAction" prefHeight="40.0" prefWidth="50.0" text="2" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Button maxHeight="40.0" maxWidth="50.0" minHeight="40.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleOneAction" prefHeight="40.0" prefWidth="50.0" text="1" GridPane.rowIndex="4" />
+            <TextField fx:id="displayField" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnSpan="2147483647">
+               <GridPane.margin>
+                  <Insets bottom="10.0" />
+               </GridPane.margin>
+            </TextField>
+            <Button maxHeight="40.0" maxWidth="50.0" minHeight="40.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleFourAction" prefHeight="40.0" prefWidth="50.0" text="4" GridPane.rowIndex="3" />
+            <Button maxHeight="40.0" maxWidth="50.0" minHeight="40.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleOneAction" prefHeight="40.0" prefWidth="50.0" text="5" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Button maxHeight="40.0" maxWidth="50.0" minHeight="40.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleOneAction" prefHeight="40.0" prefWidth="50.0" text="6" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Button maxHeight="40.0" maxWidth="50.0" minHeight="40.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleOneAction" prefHeight="40.0" prefWidth="50.0" text="7" GridPane.rowIndex="2" />
+            <Button maxHeight="40.0" maxWidth="50.0" minHeight="40.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleOneAction" prefHeight="40.0" prefWidth="50.0" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button maxHeight="40.0" maxWidth="50.0" minHeight="40.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleOneAction" prefHeight="40.0" prefWidth="50.0" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Button maxHeight="40.0" maxWidth="50.0" minHeight="40.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleZeroAction" prefHeight="40.0" prefWidth="50.0" text="0" GridPane.rowIndex="5" />
+            <Button maxHeight="40.0" maxWidth="50.0" minHeight="40.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleDotAction" prefHeight="40.0" prefWidth="50.0" text="." GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Button maxHeight="40.0" maxWidth="50.0" minHeight="40.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleEqualAction" prefHeight="40.0" prefWidth="50.0" text="=" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+            <Button maxHeight="40.0" maxWidth="50.0" minHeight="40.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleAdditionAction" prefHeight="40.0" prefWidth="50.0" text="+" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+            <Button maxHeight="40.0" maxWidth="50.0" minHeight="40.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleSubtractAction" prefHeight="40.0" prefWidth="50.0" text="-" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+            <Button maxHeight="40.0" maxWidth="50.0" minHeight="40.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleOneAction" prefHeight="40.0" prefWidth="50.0" text="x" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <Button maxHeight="40.0" maxWidth="50.0" minHeight="40.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleOneAction" prefHeight="40.0" prefWidth="50.0" text="/" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <Button maxHeight="40.0" maxWidth="50.0" minHeight="40.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleOneAction" prefHeight="40.0" prefWidth="50.0" text="sqrt" GridPane.rowIndex="1" />
+            <Button maxHeight="40.0" maxWidth="50.0" minHeight="40.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleOneAction" prefHeight="40.0" prefWidth="50.0" text="sqr" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Button maxHeight="40.0" maxWidth="50.0" minHeight="40.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleClearAction" prefHeight="40.0" prefWidth="50.0" text="C" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Button maxHeight="40.0" maxWidth="50.0" minHeight="40.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleAllClearAction" prefHeight="40.0" prefWidth="50.0" text="AC" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
