--- a/section3/Assignment 1 Demo/src/assignment/pkg1/demo/FXMLDocument.fxml
+++ b/section3/Assignment 1 Demo/src/assignment/pkg1/demo/FXMLDocument.fxml
@@ -6,9 +6,33 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="assignment.pkg1.demo.FXMLDocumentController">
+<AnchorPane id="AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assignment.pkg1.demo.FXMLDocumentController">
    <children>
-      <ListView fx:id="listView" layoutX="14.0" layoutY="14.0" prefHeight="116.0" prefWidth="200.0" />
-      <TextField fx:id="itemField" layoutX="14.0" layoutY="147.0" onAction="#handleAddItem" prefHeight="25.0" prefWidth="200.0" />
+      <SplitPane dividerPositions="0.5" layoutX="14.0" layoutY="14.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
+         <items>
+            <VBox layoutX="14.0" layoutY="14.0">
+               <children>
+                  <ListView fx:id="listView" layoutX="14.0" layoutY="14.0" onMouseClicked="#handleItemSelection" prefHeight="116.0" prefWidth="242.0" />
+                  <TextField fx:id="itemField" onAction="#handleAddItem" prefHeight="25.0" prefWidth="200.0" />
+               </children>
+            </VBox>
+            <VBox prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <DatePicker fx:id="datePicker" />
+                  <TextField fx:id="titleField" />
+                  <TitledPane text="Todo List">
+                     <content>
+                        <ListView fx:id="todoListView" prefHeight="200.0" prefWidth="200.0" />
+                     </content>
+                  </TitledPane>
+                  <TitledPane text="Completed List">
+                     <content>
+                        <ListView fx:id="completedListView" prefHeight="200.0" prefWidth="200.0" />
+                     </content>
+                  </TitledPane>
+               </children>
+            </VBox>
+         </items>
+      </SplitPane>
    </children>
 </AnchorPane>
