--- a/section3/Database GUI Demo/src/database/gui/demo/FXMLDocument.fxml
+++ b/section3/Database GUI Demo/src/database/gui/demo/FXMLDocument.fxml
@@ -6,8 +6,35 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="database.gui.demo.FXMLDocumentController">
-   <children>
-      <ListView fx:id="studentListView" layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0" />
-   </children>
-</AnchorPane>
+
+<SplitPane dividerPositions="0.2865612648221344" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="database.gui.demo.FXMLDocumentController">
+   <items>
+      <AnchorPane id="AnchorPane" prefHeight="200" prefWidth="155.0">
+         <children>
+            <ListView fx:id="studentListView" layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0" />
+         </children>
+      </AnchorPane>
+      <AnchorPane prefHeight="200.0" prefWidth="343.0">
+         <children>
+            <GridPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="173.0" minWidth="10.0" prefWidth="110.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="247.0" minWidth="10.0" prefWidth="247.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Student ID" />
+                  <Label text="Student Name" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" onAction="#handleAddStudentAction" text="Add Student" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField fx:id="studentIdField" GridPane.columnIndex="1" />
+                  <TextField fx:id="studentNameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+               </children>
+            </GridPane>
+         </children>
+      </AnchorPane>
+   </items>
+</SplitPane>
